Avoid jumping margins when sorting.

--- a/src/inc/builder/sections/css/sections.css
+++ b/src/inc/builder/sections/css/sections.css
@@ -17,6 +17,7 @@
 	display: flex;
 	display: -webkit-flex;
 	padding: 0 9px;
+	margin: 0;
 }
 /*---------------------------------------------------------
  Text and Gallery section (sections.css)
